# llm-inference

./: .env.backup.1777317785  .env.backup.1777319169  .env.backup.1777319171  .env.backup.1777321583  .env.backup.1777321615  .env.backup.1777322161  .env.backup.1777322163  .env.backup.1777322166  .env.backup.1777322660  .env.backup.1777322880  .env.example  .env.hf_baseline  .env.novllm  .env.test_cpu  .env.vllm  .env.vllm_all  .env.vllm_constrained  .env.vllm_draft_1b  .env.vllm_draft_3b  .env.vllm_draft_cross  .env.vllm_only  .env.vllm_speculative  .gitignore  .gitignore.save  1B_TESTING_GUIDE.md  =0.43.0  CONSTRAINED_SPECULATIVE_DECODING.md  EVALUATION_WORKFLOW.md  QUICKSTART.md  README.md  RUNNING_CONFIGURATIONS.md  SETUP_LOCAL.md  add_server.sh  analyze_rag_decoding_tradespace.py  analyze_rag_pareto.py  clean_workspace.sh  compare_constrained_runs.py  compare_decoding_runs.py  compare_runs.sh  dashboard.py  (+153 more)
0/: xXx0FF3QtV3aIaNWWIe0FrmJZYa.sh  xXx0FF3QtV3aIaNWWIe0FrmJZYa_model.sh  xXx0Fpyz4y94LUhmZIU76912INJ.sh  xXx0cqzQq1k4KmKWQiOGZPxBFXD_model.sh  xXx0m2Zy8tm4T1DKlUgHNCqk3Fq.sh  xXx0oZEeNkpyaKtQG8470qYvnFn.sh  xXx0oqvVR5aNNyysjp2WNgs5rqa.sh  xXx0pKVOuoZAkX5n8F8ircLG9O5.sh  xXx0vjez9WaL7mnJGIlSMQqmg8y.sh  xXx0wEeL5pwLr5Zs7WgCNoIYrsd.sh  xXx0wEeL5pwLr5Zs7WgCNoIYrsd_model.sh  xXx1D91TDPNkIi2p2alSA3qJC77.sh  xXx1NG6P974s6bm7hI0aAu1c0hZ.sh  xXx1OUNchLwfMtdxquRSPQbhMkM.sh  xXx1OUNchLwfMtdxquRSPQbhMkM_model.sh  xXx1OzzqhjfkcGWMOOluTd9GGBP.sh  xXx1UcwaZaLd33uNIBol7PETn0n_model.txt  xXx1b4NRU7UEEk6QJTZ3VV0EbiH.sh  xXx1b4NRU7UEEk6QJTZ3VV0EbiH_model.sh  xXx1etYyE7FPnc6c4wZIczLWFJU.sh  xXx1etYyE7FPnc6c4wZIczLWFJU_model.sh  xXx1pu43UefTs85vk7LhwGXuiTJ.sh  xXx1vGMlpr8VGDiv5vftDu9EJV4.sh  xXx1vGMlpr8VGDiv5vftDu9EJV4_model.txt  xXx1xFZjAj2r3dAYZC6scFwtUhD_model.sh  xXx1xFZjAj2r3dAYZC6scFwtUhD_model.txt  xXx1y4179yvUorvyPQVIKi11WVi.sh  (+1026 more)
(+1402 files in other folders)
