[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-guided-evolution"
version = "0.1.0"
description = "llm-guided-evolution, virtual environment that includes packages necessary for local llm integration & model evaluation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.20.0",
    "aiohttp>=3.8.0",
    "deap==1.4.1",
    "fastapi>=0.100.0",
    "flake8>=7.2.0",
    "furo>=2024.8.6",
    "google-genai>=1.12.1",
    "huggingface-hub>=0.16.0",
    "hydra-core==1.3.2",
    "matplotlib>=3.9.0",
    "numpy>=2.0.2",
    "omegaconf>=2.3.0",
    "pdfplumber>=0.10.0",
    "pandas>=1.5.0",
    "PyPDF2>=3.0.0",
    "pydantic>=2.0.0",
    "pytest>=8.3.5",
    "pyyaml>=6.0",
    "requests>=2.25.0",
    "sentence-transformers>=2.2.0",
    "seaborn>=0.11.0",
    "sphinx>=8.2.3",
    "torch==2.6.0",
    "torchvision",
    "transformers>=4.30.0",
    "faiss-cpu>=1.7.4",
    "tqdm>=4.64.0",
    "uvicorn>=0.20.0",
    "bitsandbytes>=0.49.1",
    "vllm>=0.8.5.post1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "integration: marks tests as integration tests (require real external services or SLURM)",
    "slow: marks tests as slow (typically >10 s; excluded from fast CI sweeps)",
]
